--- a/prod/index.html
+++ b/prod/index.html
@@ -11,120 +11,218 @@
     <title>KOFEISKI</title>
 </head>
 <body>
+    <header>
+        <div class="container header-wrapper light-theme">
 
-<!--<div class="container main-logo-wrapper">-->
-<!--    <h1><a href="#"><img src="img/logo/logo.svg" alt="Kofeiski" class="main-logo"></a></h1>-->
-<!--</div>-->
-
-<div class="container header-wrapper">
-    <div class="main-logo-wrapper">
-            <a href="#"><img src="img/logo/logoDark.png" alt="KOFEISKI" class="main-logo"></a>
-    </div>
-</div>
-
-
-<div class="container carousel">
-    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="img/drinks/coffee1.jpeg" class="d-block w-100" alt="...">
+            <div class="main-logo-wrapper">
+                <a href="#"><img src="img/logo/logoDark.png" alt="KOFEISKI" class="main-logo"></a>
             </div>
-            <div class="carousel-item">
-                <img src="img/drinks/coffee2.jpeg" class="d-block w-100" alt="...">
+
+            <div class="theme-tumbler-wrapper">
+
+                <div class="theme-tumbler">
+                    <div class="theme-tumbler-circle"></div>
+                </div>
+
             </div>
-            <div class="carousel-item">
-                <img src="img/drinks/coffee3.jpeg" class="d-block w-100" alt="...">
+
+
+            <div class="lang-btns-wrapper">
+                <button class="lang-button ukr-lang-btn" value="ukr">UKR</button>
+                <button class="lang-button eng-lang-btn" value="eng">ENG</button>
             </div>
-            <div class="carousel-item">
-                <img src="img/drinks/coffee4.jpeg" class="d-block w-100" alt="...">
+
+        </div>
+    </header>
+
+    <main>
+        <div class="container carousel">
+            <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="img/drinks/coffee1.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/drinks/coffee2.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/drinks/coffee3.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/drinks/coffee4.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-</div>
 
-<div class="container ukrainian-wrapper">
+        <div class="container ukrainian-wrapper">
 
-    <div class="container classic-drinks-wrapper">
-        <h2 class="h2titles">Класичні напої &#9829</h2>
-        <div class="classic-drinks">
-            <ul class="classic-drinks-names">
-                <li>Еспресо</li>
-                <li>Макіато</li>
-                <li>Американо</li>
-                <li>* з молоком</li>
-                <li>Капучіно</li>
-                <li>Лате</li>
-            </ul>
+            <div class="container classic-drinks-wrapper light-theme">
+                <h2 class="h2titles">Класичні напої &#9829</h2>
+                <div class="classic-drinks">
+                    <ul class="classic-drinks-names">
+                        <li>Еспресо</li>
+                        <li>Макіато</li>
+                        <li>Американо</li>
+                        <li>* з молоком</li>
+                        <li>Капучіно</li>
+                        <li>Лате</li>
+                    </ul>
 
-            <ul class="classic-drinks-prices">
-                <li>30   43</li>
-                <li>35</li>
-                <li>30   43   48</li>
-                <li>35   48   55</li>
-                <li>43   48   55   60</li>
-                <li>43   48   55   60</li>
-            </ul>
+                    <ul class="classic-drinks-prices">
+                        <li>30   43</li>
+                        <li>35</li>
+                        <li>30   43   48</li>
+                        <li>35   48   55</li>
+                        <li>43   48   55   60</li>
+                        <li>43   48   55   60</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="container coffee-drinks-wrapper light-theme">
+                <h2>Альтернативні напої</h2>
+                <div class="coffee-drinks">
+                    <ul class="coffee-drinks-names">
+                        <li>Флет уайт</li>
+                        <li>Раф-кава</li>
+                        <li>Баунті</li>
+                        <li>Моко</li>
+                    </ul>
+
+                    <ul class="coffee-drinks-prices">
+                        <li>59</li>
+                        <li>60   65</li>
+                        <li>69</li>
+                        <li>60   65</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="container warming-drinks-wrapper light-theme">
+                <h2 class="h2titles">Зігріваючі напої</h2>
+                <div class="warming-drinks">
+                    <ul class="warming-drinks-names">
+                        <li>Чай</li>
+                        <li>Ягідний чай</li>
+                        <li>Какао</li>
+                        <li>Шоколад</li>
+                        <li>Бамбіно</li>
+                    </ul>
+
+                    <ul class="warming-drinks-prices">
+                        <li>35</li>
+                        <li>50</li>
+                        <li>48   60</li>
+                        <li>50</li>
+                        <li>48</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="container additional-wrapper light-theme">
+                <h2>Додатково</h2>
+                <div class="additional">
+                    <ul class="additional-names">
+                        <li>Зефірки</li>
+                        <li>Рослинне</li>
+                        <li>Безлактозне</li>
+                    </ul>
+
+                    <ul class="additional-prices">
+                        <li>15</li>
+                        <li>15   20</li>
+                        <li>25   35</li>
+                    </ul>
+                </div>
+            </div>
+
         </div>
-    </div>
 
-    <div class="container coffee-drinks-wrapper">
-        <h2>Альтернативні напої</h2>
-        <div class="coffee-drinks">
-            <ul class="coffee-drinks-names">
-                <li>Флет уайт</li>
-                <li>Раф-кава</li>
-                <li>Баунті</li>
-                <li>Моко</li>
-            </ul>
+        <div class="container english-wrapper unchecked-language">
 
-            <ul class="coffee-drinks-prices">
-                <li>59</li>
-                <li>60   65</li>
-                <li>69</li>
-                <li>60   65</li>
-            </ul>
+            <div class="container classic-drinks-wrapper light-theme">
+                <h2 class="h2titles">Classic coffee &#9829</h2>
+                <div class="classic-drinks">
+                    <ul class="classic-drinks-names">
+                        <li>Espresso</li>
+                        <li>Macchiato</li>
+                        <li>Americano</li>
+                        <li>* with milk</li>
+                        <li>Cappuccino</li>
+                        <li>Latte</li>
+                    </ul>
+
+                    <ul class="classic-drinks-prices">
+                        <li>30   43</li>
+                        <li>35</li>
+                        <li>30   43   48</li>
+                        <li>35   48   55</li>
+                        <li>43   48   55   60</li>
+                        <li>43   48   55   60</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="container coffee-drinks-wrapper light-theme">
+                <h2>Alternative drinks</h2>
+                <div class="coffee-drinks">
+                    <ul class="coffee-drinks-names">
+                        <li>Flat white</li>
+                        <li>Raff-coffee</li>
+                        <li>Bounty</li>
+                        <li>Mocha</li>
+                    </ul>
+
+                    <ul class="coffee-drinks-prices">
+                        <li>59</li>
+                        <li>60   65</li>
+                        <li>69</li>
+                        <li>60   65</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="container warming-drinks-wrapper light-theme">
+                <h2 class="h2titles">Warming drinks</h2>
+                <div class="warming-drinks">
+                    <ul class="warming-drinks-names">
+                        <li>Tea</li>
+                        <li>Berries tea</li>
+                        <li>Cocoa</li>
+                        <li>Chocolate</li>
+                        <li>Bambino</li>
+                    </ul>
+
+                    <ul class="warming-drinks-prices">
+                        <li>35</li>
+                        <li>50</li>
+                        <li>48   60</li>
+                        <li>50</li>
+                        <li>48</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="container additional-wrapper light-theme">
+                <h2>Additional</h2>
+                <div class="additional">
+                    <ul class="additional-names">
+                        <li>Marshmellow</li>
+                        <li>Plant milk</li>
+                        <li>Non lactose</li>
+                    </ul>
+
+                    <ul class="additional-prices">
+                        <li>15</li>
+                        <li>15   20</li>
+                        <li>25   35</li>
+                    </ul>
+                </div>
+            </div>
+
         </div>
-    </div>
-
-    <div class="container warming-drinks-wrapper">
-        <h2 class="h2titles">Зігріваючі напої</h2>
-        <div class="warming-drinks">
-            <ul class="warming-drinks-names">
-                <li>Чай</li>
-                <li>Ягідний чай</li>
-                <li>Какао</li>
-                <li>Шоколад</li>
-                <li>Бамбіно</li>
-            </ul>
-
-            <ul class="warming-drinks-prices">
-                <li>35</li>
-                <li>50</li>
-                <li>48   60</li>
-                <li>50</li>
-                <li>48</li>
-            </ul>
-        </div>
-    </div>
-
-    <div class="container additional-wrapper">
-        <h2>Додатково</h2>
-        <div class="additional">
-            <ul class="additional-names">
-                <li>Зефірки</li>
-                <li>Рослинне</li>
-                <li>Безлактозне</li>
-            </ul>
-
-            <ul class="additional-prices">
-                <li>15</li>
-                <li>15   20</li>
-                <li>25   35</li>
-            </ul>
-        </div>
-    </div>
-
-</div>
+    </main>
 
 
 <script src="js/app.js"></script>
