--- a/prod/index.html
+++ b/prod/index.html
@@ -64,176 +64,16 @@
             </div>
         </div>
 
-        <div class="container ukrainian-wrapper" id="ukr">
+        <div class="container ukrainian-wrapper" id="ukr"></div>
 
-            <div class="container classic-drinks-wrapper light-theme">
-                <h2 class="h2titles">Класичні напої &#9829</h2>
-                <div class="classic-drinks">
-                    <ul class="classic-drinks-names">
-                        <li>Еспресо</li>
-                        <li>Макіато</li>
-                        <li>Американо</li>
-                        <li>* з молоком</li>
-                        <li>Капучіно</li>
-                        <li>Лате</li>
-                    </ul>
+        <div class="container english-wrapper unchecked-language"></div>
 
-                    <ul class="classic-drinks-prices">
-                        <li>30   43</li>
-                        <li>35</li>
-                        <li>30   43   48</li>
-                        <li>35   48   55</li>
-                        <li>43   48   55   60</li>
-                        <li>43   48   55   60</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="container coffee-drinks-wrapper light-theme">
-                <h2>Альтернативні напої</h2>
-                <div class="coffee-drinks">
-                    <ul class="coffee-drinks-names">
-                        <li>Флет уайт</li>
-                        <li>Раф-кава</li>
-                        <li>Баунті</li>
-                        <li>Моко</li>
-                    </ul>
-
-                    <ul class="coffee-drinks-prices">
-                        <li>59</li>
-                        <li>60   65</li>
-                        <li>69</li>
-                        <li>60   65</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="container warming-drinks-wrapper light-theme">
-                <h2 class="h2titles">Зігріваючі напої</h2>
-                <div class="warming-drinks">
-                    <ul class="warming-drinks-names">
-                        <li>Чай</li>
-                        <li>Ягідний чай</li>
-                        <li>Какао</li>
-                        <li>Шоколад</li>
-                        <li>Бамбіно</li>
-                    </ul>
-
-                    <ul class="warming-drinks-prices">
-                        <li>35</li>
-                        <li>50</li>
-                        <li>48   60</li>
-                        <li>50</li>
-                        <li>48</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="container additional-wrapper light-theme">
-                <h2>Додатково</h2>
-                <div class="additional">
-                    <ul class="additional-names">
-                        <li>Зефірки</li>
-                        <li>Рослинне</li>
-                        <li>Безлактозне</li>
-                    </ul>
-
-                    <ul class="additional-prices">
-                        <li>15</li>
-                        <li>15   20</li>
-                        <li>25   35</li>
-                    </ul>
-                </div>
-            </div>
-
-        </div>
-
-        <div class="container english-wrapper unchecked-language">
-
-            <div class="container classic-drinks-wrapper light-theme">
-                <h2 class="h2titles">Classic coffee &#9829</h2>
-                <div class="classic-drinks">
-                    <ul class="classic-drinks-names">
-                        <li>Espresso</li>
-                        <li>Macchiato</li>
-                        <li>Americano</li>
-                        <li>* with milk</li>
-                        <li>Cappuccino</li>
-                        <li>Latte</li>
-                    </ul>
-
-                    <ul class="classic-drinks-prices">
-                        <li>30   43</li>
-                        <li>35</li>
-                        <li>30   43   48</li>
-                        <li>35   48   55</li>
-                        <li>43   48   55   60</li>
-                        <li>43   48   55   60</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="container coffee-drinks-wrapper light-theme">
-                <h2>Alternative drinks</h2>
-                <div class="coffee-drinks">
-                    <ul class="coffee-drinks-names">
-                        <li>Flat white</li>
-                        <li>Raff-coffee</li>
-                        <li>Bounty</li>
-                        <li>Mocha</li>
-                    </ul>
-
-                    <ul class="coffee-drinks-prices">
-                        <li>59</li>
-                        <li>60   65</li>
-                        <li>69</li>
-                        <li>60   65</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="container warming-drinks-wrapper light-theme">
-                <h2 class="h2titles">Warming drinks</h2>
-                <div class="warming-drinks">
-                    <ul class="warming-drinks-names">
-                        <li>Tea</li>
-                        <li>Berries tea</li>
-                        <li>Cocoa</li>
-                        <li>Chocolate</li>
-                        <li>Bambino</li>
-                    </ul>
-
-                    <ul class="warming-drinks-prices">
-                        <li>35</li>
-                        <li>50</li>
-                        <li>48   60</li>
-                        <li>50</li>
-                        <li>48</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="container additional-wrapper light-theme">
-                <h2>Additional</h2>
-                <div class="additional">
-                    <ul class="additional-names">
-                        <li>Marshmellow</li>
-                        <li>Plant milk</li>
-                        <li>Non lactose</li>
-                    </ul>
-
-                    <ul class="additional-prices">
-                        <li>15</li>
-                        <li>15   20</li>
-                        <li>25   35</li>
-                    </ul>
-                </div>
-            </div>
-
-        </div>
     </main>
 
-<script src="js/app.js" defer></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+    <script src="js/view.js" defer></script>
+    <script src="js/model.js" defer></script>
+    <script src="js/controller.js" defer></script>
+    <script src="js/app.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 </body>
 </html>
