--- a/prod/index.html
+++ b/prod/index.html
@@ -49,6 +49,12 @@
             <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
+                        <img src="img/drinks/drink1.webp" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/drinks/drink2.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
                         <img src="img/drinks/coffee1.jpeg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
@@ -60,6 +66,7 @@
                     <div class="carousel-item">
                         <img src="img/drinks/coffee4.jpeg" class="d-block w-100" alt="...">
                     </div>
+
                 </div>
             </div>
         </div>
@@ -69,7 +76,11 @@
         <div class="container english-wrapper unchecked-language"></div>
 
     </main>
-
+    <footer>
+        <div>
+            <p><span>Парк Перемоги</span> на перетині <span>Говорова</span> та <span>Академічної</span></p>
+        </div>
+    </footer>
     <script src="js/view.js" defer></script>
     <script src="js/model.js" defer></script>
     <script src="js/controller.js" defer></script>
